--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>LOTERIA DOS ALUNOS - ADVINHE OS NÚMEROS</h1>
+        <h1>LOTERIA DOS ALUNOS - ADIVINHE OS NÚMEROS</h1>
     </header>
     <main>
         <section id="numbers" class="numbers-panels">
+        </section>
+        <section id="selected" class="numbers-panels">
 
         </section>
-        <section id="selected">
-
-        </section>
-        <section id="result">
+        <section id="result" class="numbers-panels">
 
         </section>
     </main>
